Fix the alignment of the with unit component

--- a/src/components/unit-picker/style.scss
+++ b/src/components/unit-picker/style.scss
@@ -12,6 +12,7 @@
 
 	div {
 		margin-bottom: 0;
+		align-items: center;
 	}
 }
 
